@@ -625,7 +625,7 @@
 		lv2:name "DEF1 Pitchbend" ;
 		lv2:default 0.2 ;
 		lv2:minimum 0.0 ;
-		lv2:maximum 1.0 ;
+		lv2:maximum 4.0 ;
 		lv2pg:group padthv1_lv2:G106_DEF1 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
