@@ -3,7 +3,7 @@
  <author>rncbc aka Rui Nuno Capela</author>
  <comment>padthv1 - an old-school additive polyphonic synthesizer
 
-  Copyright (C) 2012-2019, rncbc aka Rui Nuno Capela. All rights reserved.
+  Copyright (C) 2012-2020, rncbc aka Rui Nuno Capela. All rights reserved.
 
   This program is free software; you can redistribute it and/or
   modify it under the terms of the GNU General Public License
